--- a/core/components/HelpButton.module.css
+++ b/core/components/HelpButton.module.css
@@ -35,7 +35,8 @@
 /* The content panel that appears when tips are shown */
 .tipsContentContainer {
     width: min(75vw, clamp(270px, 25vw, 340px));
-    margin-top: 15px;
+    margin-top: -34px;
+    margin-left: 44px;
     padding: 0.25rem;
     background-color: var(--map-popup-background-color);
     border: var(--map-popup-border);
